--- a/app/scss/base/_variables.scss
+++ b/app/scss/base/_variables.scss
@@ -20,3 +20,4 @@ $primary-font--bold: "SegoeUI-Bold" sans-serif;
 $primary-font--semibold: "SegoeUI-SemiBold" sans-serif;
 
 $container-size: 1200px;
+$container-size--small: 830px;
