--- a/app/scss/base/_buttons.scss
+++ b/app/scss/base/_buttons.scss
@@ -1,11 +1,13 @@
 $colors: (
-	bg-color: $color1
+	bg-color: $color1,
+	white-color: $color3
 );
 .btn {
 	min-width: 100px;
 	display: inline-block;
-	max-width: 300px;
+	cursor: pointer;
 	padding: 11px 30px;
+	color: map-get($colors, white-color);
 	background-color: map-get($colors, bg-color);
 	border: 1px solid map-get($colors, bg-color);
 	@include transition(background-color);
