--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -10,6 +10,8 @@
 @import "partials/header";
 @import "components/navigation";
 @import "components/main-info";
+@import "components/success";
+@import "components/question";
 
 @import "partials/footer";
  
