--- a/app/scss/base/_base.scss
+++ b/app/scss/base/_base.scss
@@ -91,6 +91,7 @@ input[type="text"],
 input[type="password"],
 input[type="file"],
 input[type="submit"],
+select,
 textarea {
   -webkit-appearance: none;
 }
