--- a/app/scss/components/_success.scss
+++ b/app/scss/components/_success.scss
@@ -1,15 +1,27 @@
-.success__wrappper{
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-  grid-template-rows: minmax(220px, auto);
-  grid-gap: 20px 20px;
+$colors: (
+	bg-color: $color1,
+	white-color: $color3
+);
+.success__wrapper{
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: -20px;
   &-item{
-    display: flex;
-    flex-flow: column nowrap;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    box-shadow: 0px -12px 13px -2px rgba(0,0,0,0.75);
+	width: 20%;
+	padding-left: 20px;
+  }
+  &-link {
+	padding: 140px 14px 72px;
+	display: flex;
+	align-items: center;
+	color: #000;
+	box-shadow: 0 -40px 99px rgba(0, 0, 0, 0.06);
+	flex-direction: column;
+	text-align: center;
+	@include transition(background-color);
+	&:hover {
+		background-color: lighten(map-get($colors, bg-color), 30%);
+	}
   }
   &-img{
     padding-bottom: 33px;
